# okx-historic-loader

./: .gitignore  default_params.toml  pyproject.toml
src/: main.py
src/file_storage/: __init__.py  storage_router.py
src/file_storage/storage_readers/: local_file_storage_reader.py  storage_reader_protocol.py
src/file_storage/storage_writers/: local_file_storage_writer.py  storage_writer_protocol.py
src/historical_backup_service/: historical_backup_service.py
src/okx_trade_fetcher/: okx_trade_fetcher.py
src/utilities/: custom_types.py  helpers.py  input_param_parser.py
